--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,7 +23,7 @@ jobs:
         with:
           node-version: 16.x
       # Run npm install and build on our code
-      - run: npm install enzyme-adapter-react-16 --legacy-peer-deps 
+      - run: npm install --legacy-peer-deps 
       - run: npm run build --if-present
       # Run Test
       - name: Run tests
